--- a/code/templates/homepage.html
+++ b/code/templates/homepage.html
@@ -6,7 +6,7 @@
     <title>SQL Generator</title>
   </head>
   <body>
-    <a href="/search">
+    <a href="/snippets">
       <button class="glow-on-hover" type="button">Snippets</button>
     </a>
   </body>
