--- a/code/templates/addsnippets.html
+++ b/code/templates/addsnippets.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="static/addsnippets.css">
     <title>Add Snippets</title>
   </head>
   <body>
