--- a/code/templates/snippets.html
+++ b/code/templates/snippets.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="static/snippets.css">
+    <link rel="stylesheet" type="text/css" href="snippets.css">
     <script src="static/snippets.js"></script>
     <title>Snippets</title>
   </head>
