--- a/code/templates/homepage.html
+++ b/code/templates/homepage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="static/homepage.css">
+    <link rel="stylesheet" href="homepage.css">
     <meta charset="UTF-8">
     <title>SQL Generator</title>
   </head>
