Adding homepage buttons

--- a/code/templates/homepage.html
+++ b/code/templates/homepage.html
@@ -6,8 +6,26 @@
     <title>SQL Generator</title>
   </head>
   <body>
-    <a href="/snippets">
-      <button class="glow-on-hover" type="button">Snippets</button>
-    </a>
+    <h2>SQL Multitool</h2>
+    <div class="snippets">
+      <a href="/snippets">
+        <button class="button" type="button">Snippets</button>
+      </a>
+    </div>
+    <div class="temp1">
+      <a href="/temp">
+        <button class="button" type="button">Temp</button>
+      </a>
+    </div>
+    <div class="temp2">
+      <a href="/temp">
+        <button class="button" type="button">Temp</button>
+      </a>
+    </div>
+    <div class="temp3">
+      <a href="/temp">
+        <button class="button" type="button">Temp</button>
+      </a>
+    </div>
   </body>
 </html>
