--- a/code/static/homepage.css
+++ b/code/static/homepage.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -11,65 +11,67 @@ body {
     font-family: "JetBrains Mono", "Ubuntu Mono", Monospace;
 }
 
-.glow-on-hover {
-    width: 500px;
-    height: 400px;
+.snippets {
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    left: 20%;
+    bottom: 50%;
+    width: 25%;
+    height: 25%;
+    box-shadow: 0px 0px 5px 5px #000000;
+}
+
+.temp1 {
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    left: 55%;
+    bottom: 50%;
+    width: 25%;
+    height: 25%;
+    box-shadow: 0px 0px 5px 5px #000000;
+
+}
+
+.temp2 {
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    left: 20%;
+    bottom: 15%;
+    width: 25%;
+    height: 25%;
+    box-shadow: 0px 0px 5px 5px #000000;
+
+}
+
+.temp3 {
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    left: 55%;
+    bottom: 15%;
+    width: 25%;
+    height: 25%;
+    box-shadow: 0px 0px 5px 5px #000000;
+
+}
+
+.button {
+    background-color: #5e81ac;
     border: none;
-    outline: none;
-    color: #fff;
-    background: #111;
-    cursor: pointer;
-    position: relative;
-    z-index: 0;
-    border-radius: 10px;
-    font-size: 48pt;
-    font-family: "JetBrains Mono", "Ubuntu Mono", Monospace;
-
-}
-
-.glow-on-hover:before {
-    content: '';
-    background: linear-gradient(45deg, #BF616A, #D08770, #EBCB8B, #A3BE8C, #88C0D0, #B48EAD);
-    position: absolute;
-    top: -2px;
-    left:-2px;
-    background-size: 400%;
-    z-index: -1;
-    filter: blur(5px);
-    width: calc(100% + 4px);
-    height: calc(100% + 4px);
-    animation: glowing 20s linear infinite;
-    opacity: 0;
-    transition: opacity .3s ease-in-out;
-    border-radius: 10px;
-}
-
-.glow-on-hover:active {
-    color: #000
-}
-
-.glow-on-hover:active:after {
-    background: transparent;
-}
-
-.glow-on-hover:hover:before {
-    opacity: 1;
-}
-
-.glow-on-hover:after {
-    z-index: -1;
-    content: '';
-    position: absolute;
+    color: white;
     width: 100%;
     height: 100%;
-    background: #111;
-    left: 0;
-    top: 0;
-    border-radius: 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 28px;
+    transition-duration: 0.4s;
 }
 
-@keyframes glowing {
-    0% { background-position: 0 0; }
-    50% { background-position: 400% 0; }
-    100% { background-position: 0 0; }
-}
+.button:hover {
+    background-color: #81a1c1;
+    color: white;
+  }
